arm: dts: VIM4: enable I2CM_AO_A
Signed-off-by: Mark Wan <mark.wan@namtso.com>
Change-Id: I7d3b0446a7f2dfd677e48a613780b5fe79b7de17

--- a/arch/arm/dts/kvim4.dts
+++ b/arch/arm/dts/kvim4.dts
@@ -101,6 +101,12 @@
 	/*mc_val = <0x1621>;*/
 };
 
+&i2c_AO_A {
+	status= "okay";
+	clock-frequency = <100000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c0_ao_pins1>;
+};
 &ir {
 	status = "disabled";
 	/* pinctrl-0 = <&remote_input_ao_pins>; */
