--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -1236,6 +1236,12 @@ config BL30_SELECT
 choice
 	prompt "T7 Board"
 
+config KHADAS_VIM4
+	bool "Khadas VIM4"
+	select TARGET_KHADAS_VIM4
+	help
+	  Select Khadas VIM4 config
+
 config T7_SKT
 	bool "T7_SKT"
 	select TARGET_T7_SKT
@@ -1310,6 +1316,10 @@ config T7_REVC_SKT
 	  Select T7 REVC SKT(XXXX) config
 
 endchoice
+
+config TARGET_KHADAS_VIM4
+	bool "Khadas VIM4 board"
+	depends on KHADAS_VIM4
 
 config TARGET_T7_SKT
 	bool "T7 SKT board"
@@ -1879,6 +1889,10 @@ source "board/amlogic/t7_revc_skt/Kconfig"
 source "board/amlogic/t7_an408_lpddr4x/Kconfig"
 
 source "board/amlogic/t7_an409_ddr4/Kconfig"
+
+if KHADAS_VIM4
+source "board/amlogic/kvim4/Kconfig"
+endif
 
 if T7_AN400_LPDDR4X
 source "board/amlogic/t7_an400_lpddr4x/Kconfig"
