--- a/arch/arm/dts/kvim4.dts
+++ b/arch/arm/dts/kvim4.dts
@@ -6,7 +6,7 @@
 /dts-v1/;
 
 #include "meson-t7-txxx.dtsi"
-#include "meson-t7_skt-panel.dtsi"
+#include "khadas-ts050-panel.dtsi"
 
 / {
 	compatible = "khadas,vim4","amlogic,t7-an400-lpddr4x", "amlogic,t7-txxx", "amlogic,meson-t7";
@@ -99,6 +99,13 @@
 	internal_phy = <1>;
 	mc_val = <0x4be04>;
 	/*mc_val = <0x1621>;*/
+};
+
+&i2c3 {
+       status= "okay";
+       pinctrl-names = "default";
+       pinctrl-0 = <&i2c3_pins1>;
+       clock-frequency = <100000>;
 };
 
 &i2c_AO_A {
