VIM4/4N: add support for WOL
Signed-off-by: Mark Wan <mark.wan@namtso.com>
Change-Id: Ib00b180caf02d01af3eb947495fae3752e77b660

--- a/cmd/Makefile
+++ b/cmd/Makefile
@@ -186,6 +186,8 @@ obj-$(CONFIG_CMD_SARADC) += saradc.o
 obj-$(CONFIG_CMD_STARTDSP) += cmd_startdsp.o
 obj-$(CONFIG_CMD_REMAPSET) += cmd_remapset.o
 obj-$(CONFIG_CMD_IR) += irkey.o
+obj-$(CONFIG_CMD_KHADAS_KBI) += kbi.o
+
 # Power
 obj-$(CONFIG_CMD_PMIC) += pmic.o
 obj-$(CONFIG_CMD_REGULATOR) += regulator.o
