--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1989,4 +1989,15 @@ config CMD_INI
 	help
 	  support ini command
 
+menu "Khadas commands"
+
+
+config CMD_KHADAS_KBI
+	bool "support khadas kbi"
+	default y
+	help
+	  support config for khadas kbi
+
+endmenu
+
 endmenu
