--- a/arch/arm/dts/kvim4.dts
+++ b/arch/arm/dts/kvim4.dts
@@ -281,8 +281,15 @@
 &spifc {
 	status = "okay";
 	cs-gpios = <&gpio GPIOB_12 GPIO_ACTIVE_HIGH>;
+//	clocks = <&clkc CLKID_CLK81>;
+//	clocks = <&clkc CLKID_SPIFC>;
+	clocks = <&clkc CLKID_SYS_PLL>;
+	clock-names = "core";
 	spi-flash@0 {
 		status = "okay";
+		compatible = "winbond,w25q256fw", "jedec,spi-nor";
+		//spi-max-frequency = <83333333>; / * crc error */
+		spi-max-frequency = <40000000>;
 	};
 };
 
